# AI-Decision-OS

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/ai-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/ai-service/app/: __init__.py  config.py  main.py
apps/ai-service/app/api/: routes.py
apps/ai-service/app/evals/: __init__.py
apps/ai-service/app/graph/: __init__.py  build.py  nodes.py  prompts.py  state.py
apps/ai-service/app/router/: __init__.py  llm.py
apps/ai-service/app/schemas/: __init__.py  decision.py
apps/ai-service/app/scoring/: __init__.py  aggregate.py
apps/ai-service/app/tools/: __init__.py
apps/ai-service/tests/: fakes.py  test_clarify.py  test_graph.py  test_health.py  test_llm.py  test_scoring.py  test_stream.py
apps/web/: Dockerfile  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/decisions/: route.ts
apps/web/app/api/decisions/[id]/: route.ts
apps/web/app/history/: page.tsx
apps/web/app/history/[id]/: page.tsx
apps/web/components/: auth-gate.tsx  decision-input.tsx
apps/web/components/decision/: decision-dashboard.tsx  decision-experience.tsx  radar-chart.tsx  thinking-timeline.tsx
apps/web/lib/: scoring.ts  sse.ts  types.ts
apps/web/lib/supabase/: server.ts
supabase/: README.md  seed.sql
supabase/migrations/: 20260627223933_init_schema.sql  20260627223934_rls_policies.sql  20260628001207_decision_result_snapshot.sql
(+2 files in other folders)
