[project]
name = "ai-decision-os-ai-service"
version = "0.0.0"
description = "AI Decision OS — multi-agent decision reasoning service."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "httpx>=0.28",
  "sse-starlette>=2.1",
  "anthropic>=0.42",
  "langgraph>=0.2.60",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.9",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "mypy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
